--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "swagger-autogen": "node swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "nanoid": "^4.0.2",
-    "nedb-promise": "^2.0.1"
+    "nedb-promise": "^2.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "swagger-autogen": "^2.23.1"
